indicator:

    	    !	    modified
    	    +	    added
    	    -	    deleted
    	    +>	    branched (from elsewhere)
    	    !>	    merged changes (from elsewhere)


----------------
Version 5.004_75        5.005 Public Beta, Issue 1
----------------

____________________________________________________________________________
[  1516] By: gsar                                  on 1998/07/15  08:04:24
        Log: From:    abigail@fnx.com
             Date:    Wed, 15 Jul 1998 03:47:56 EDT
             Message-Id: <19980715074756.21868.qmail@betelgeuse.wayne.fnx.com>
             Subject: [PATCH 5.004_74] pod/pod2man.PL Fix use of < inside C<>
     Branch: perl
           ! pod/pod2man.PL
____________________________________________________________________________
[  1515] By: gsar                                  on 1998/07/15  08:02:14
        Log: From:    Ilya Zakharevich <ilya@math.ohio-state.edu>
             Date:    Wed, 15 Jul 1998 03:49:24 EDT
             Message-Id: <199807150749.DAA09177@monk.mps.ohio-state.edu>
             Subject: [PATCH 5.004_72] Additional targets for OS/2 build
     Branch: perl
           ! os2/Makefile.SHs
____________________________________________________________________________
[  1514] By: gsar                                  on 1998/07/15  07:58:29
        Log: rename some long file names to be 8.3 truncation-safe
     Branch: perl
          +> Todo-5.005 perly_c.diff pod/perld4.pod
           - Todo.5.005 perly.c.diff pod/perldelta4.pod
           ! MANIFEST Porting/pumpkin.pod perly.fixer
____________________________________________________________________________
[  1513] By: gsar                                  on 1998/07/15  07:35:29
        Log: minor tweaks to docs on qr//
     Branch: perl
           ! ext/re/re.pm pod/perldelta.pod pod/perlop.pod pod/perlre.pod
____________________________________________________________________________