@@ -809,7 +809,7 @@
 /* EBCDIC:
  *	This symbol, if defined, indicates that this system uses
  *	EBCDIC encoding.
- *.
+ */
 /*#define	EBCDIC 		/ **/
 
 /* I_ARPA_INET:
